# mom6_diagnostics_gui

./: .gitattributes  .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
data/: README.md
examples/: interactive_diag_table.ipynb
mom6_diagnostics_gui/: __init__.py
mom6_diagnostics_gui/core/: __init__.py  available_diags_parser.py  diag_table_parser.py
mom6_diagnostics_gui/standalone_defaults/: .gitkeep  README.md  default_available_diags  default_diag_table
mom6_diagnostics_gui/ui/: __init__.py  diagnostic_selector.py  main_interface.py  output_file_manager.py  table_preview.py  widget_builders.py
mom6_diagnostics_manager/: __init__.py  config.yml
mom6_diagnostics_manager/core/: __init__.py  cache_manager.py  config_loader.py  constants.py  diag_table_writer.py  diagnostic.py  diagnostic_field.py  diagnostics_parser.py  generator.py  parser.py
mom6_diagnostics_manager/data/: README.md
mom6_diagnostics_manager/ui/: __init__.py  diagnostic_selector.py  file_manager.py  interactive.py  interactive.py.backup  main_interface.py  output_file_manager.py  preview_export.py  table_preview.py  widget_builders.py  widgets.py
tests/: __init__.py  test_core.py  test_generator.py  test_parser.py
